Se ha creado la clase Reserva con todos sus atributos y métodos. Se han superado todos los tests. Se ha corregido un pequeño error en la clase Huesped